welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: not found: value isFacingTrail
		if (isFacingTrail()) 
                    ^SlugHunting:19: error: not found: value boolean
boolean isFacingTrail() 
^